[package]
name = "blinded-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
diesel = { version = "2.0", features = ["sqlite", "postgres", "r2d2", "uuid"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_sqlite_pool", "diesel_postgres_pool"] }
diesel_migrations = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8.12", features = ["chrono", "uuid"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
rand = "0.8.5"
hex = "0.4.3"
async-trait = "0.1.68"
